# ldap-authentication

./: .gitignore  Makefile  README.md  new_user.ldif  pyproject.toml
app/: __init__.py
app/auth/: models.py  views.py
tests/: test_add_user.py  test_auth.py
